casa-account-v1: added cassandra java driver and logic to connect to it